--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
+DB_CONNECTION_STRING=mongodb+srv://L_A_Studio:lovelunbao@cluster0.qrj3sci.mongodb.net/?retryWrites=true&w=majority
 
